--- a/dialog.ui
+++ b/dialog.ui
@@ -16,14 +16,24 @@
   <widget class="QPushButton" name="SavePathBtn">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>390</y>
-     <width>80</width>
+     <x>190</x>
+     <y>400</y>
+     <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>选择保存路径</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textLog">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>80</y>
+     <width>421</width>
+     <height>192</height>
+    </rect>
    </property>
   </widget>
  </widget>
